dev/k8s/web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: judge-web
  namespace: judge
spec:
  selector:
    matchLabels:
      app: judge-web
  replicas: 1
  template:
    metadata:
      labels:
        app: judge-web
    spec:
      containers:
      - name: web
        image: registry.gitlab.com/testifysec/judge-platform/web
        ports:
        - containerPort: 8077
          name: http
        volumeMounts:
          - mountPath: /src
            name: src
          - mountPath: /etc/web
            name: web-config
      volumes:
        - name:  src
          hostPath:
            path: /proj/web
        - name:  web-config
          configMap:
            name: judge-web-config
