dev/k8s/web/archivista-external.yaml
kind: Service
apiVersion: v1
metadata:
  name: archivista
  namespace: judge
spec:
  type: ExternalName
  externalName: archivista.archivista.svc.cluster.local
  ports:
  - port: 8082
