dev/k8s/web/kratos-external.yaml
kind: Service
apiVersion: v1
metadata:
  name: kratos 
  namespace: judge
spec:
  type: ExternalName
  externalName: kratos-public.kratos.svc.cluster.local
  ports:
  - port: 80
