dev/k8s/web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: judge-web
  name: judge-web
  namespace: judge
  annotations:
    cert-manager.io/cluster-issuer: tls-ca-issuer
    kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: "judge.testifysec.localhost"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: judge-web
                port:
                  number: 8077
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: judge-web
  name: judge-web-apis
  namespace: judge
  annotations:
    cert-manager.io/cluster-issuer: tls-ca-issuer
    kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: "judge.testifysec.localhost"
      http:
        paths:
          - path: /archivista(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: archivista
                port:
                  number: 8082
          - path: /hydra(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: hydra
                port:
                  number: 4444
          - path: /kratos(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: kratos
                port:
                  number: 80
  tls:
    - hosts:
        - judge.testifysec.localhost
      secretName: judge-tls-secret
---
